implemented the login functionality

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,3 +6,5 @@
   integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
   crossorigin="anonymous"
 />
+    <title>Riveria</title>
+
