--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%- include('./partials/navbar') %>
-    <h1>Hello</h1>
+    <h1>Signup</h1>
     <%- include('./partials/scripts') %>
   </body>
 </html>
