--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,16 +6,16 @@
   <body>
     <%- include('./partials/navbar') %>
     <h1>Login</h1>
-    <form action="/login" method="/post">
+    <form action="/login" method="post">
       <label>
         <span>Enter Email</span>
-        <input type="text" name="email" />
+        <input required type="text" name="email" />
       </label>
       <label>
         <span>Enter Password</span>
-        <input type="text" name="Password" />
+        <input required type="text" name="password" />
       </label>
-      <button type="submit">Log In</button>
+      <button type="submit">Log In <%= locals.error; %></button>
     </form>
     <%- include('./partials/scripts') %>
   </body>
