--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,21 @@
   <body>
     <%- include('./partials/navbar') %>
     <h1>Signup</h1>
+    <form action="/signup" method="post">
+      <label>
+        <span>Enter Full Name</span>
+        <input required type="text" name="fullName" />
+      </label>
+      <label>
+        <span>Enter Email</span>
+        <input required type="text" name="email" />
+      </label>
+      <label>
+        <span>Enter Password</span>
+        <input required type="text" name="password" />
+      </label>
+      <button type="submit">Sign Up</button>
+    </form>
     <%- include('./partials/scripts') %>
   </body>
 </html>
