--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,6 +18,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
 
+        <% if (locals.user) { %>
         <li class="nav-item">
           <a class="nav-link" href="#">Add Blog</a>
         </li>
@@ -29,13 +30,29 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Shahid
+            <%= locals.user.fullName %>
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="/logout">Logout</a></li>
           </ul>
         </li>
+        <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Signup</a>
+        </li>
+        <% } %>
       </ul>
     </div>
   </div>
 </nav>
+
+<% if(locals.error) { %>
+<div class="alert alert-danger" role="alert">
+  <% if( locals.error === 'B' || locals.error === 'C') { %> Invalid
+  Creditentials. Please try again. <% } else { %> Specify required Creditentials
+  please. <% } %>
+</div>
+<% } %>
