--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,12 +15,14 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/riveria"
+            >Home</a
+          >
         </li>
 
         <% if (locals.user) { %>
         <li class="nav-item">
-          <a class="nav-link" href="#">Add Blog</a>
+          <a class="nav-link" href="blog/add-new">Add Blog</a>
         </li>
         <li class="nav-item dropdown">
           <a
